fix(referrals): Tweeks on mobile design

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -839,14 +839,30 @@ body {
 #referrals .grid .content {
   padding: 48px;
 }
+@media only screen and (max-width: 430px) {
+  #referrals .grid .content {
+    padding: 24px;
+  }
+}
 #referrals .grid .content h1 {
   font-size: 42px;
   line-height: 50px;
   margin-bottom: 10px;
   max-width: 600px;
 }
+@media only screen and (max-width: 430px) {
+  #referrals .grid .content h1 {
+    font-size: 28px;
+    line-height: 32px;
+  }
+}
 #referrals .grid .content p {
   margin-bottom: 24px;
+}
+@media only screen and (max-width: 430px) {
+  #referrals .grid .content p {
+    margin-bottom: 12px;
+  }
 }
 #referrals .grid .content a {
   color: #fff;
@@ -857,6 +873,11 @@ body {
   text-decoration: none;
   padding: 10px 20px;
   display: inline-block;
+}
+@media only screen and (max-width: 430px) {
+  #referrals .grid .content a {
+    font-size: 18px;
+  }
 }
 #referrals .container {
   max-width: 900px;
@@ -874,6 +895,7 @@ body {
 @media only screen and (max-width: 430px) {
   #referrals .container ul.steps {
     flex-direction: column;
+    padding: 60px 0 30px 0;
   }
 }
 #referrals .container ul.steps li {
@@ -881,7 +903,7 @@ body {
 }
 @media only screen and (max-width: 430px) {
   #referrals .container ul.steps li {
-    max-width: 600px;
+    max-width: 280px;
   }
 }
 #referrals .container ul.steps li img {
@@ -898,6 +920,18 @@ body {
   text-transform: uppercase;
   margin-bottom: 20px;
 }
+@media only screen and (max-width: 430px) {
+  #referrals .container h5 {
+    color: #C72F1D;
+    font-size: 23px;
+    margin-bottom: 40px;
+  }
+}
+@media only screen and (max-width: 430px) {
+  #referrals .container .faq {
+    padding: 0 24px;
+  }
+}
 #referrals .container .faq ul {
   margin: 0;
   padding: 0;
@@ -909,6 +943,11 @@ body {
   padding: 20px;
   margin-bottom: 10px;
   border-left: 4px solid #C72F1D;
+}
+@media only screen and (max-width: 430px) {
+  #referrals .container .faq ul li h6 {
+    font-size: 18px;
+  }
 }
 #referrals .container .faq ul li p {
   padding: 20px;
